--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,20 +40,20 @@ body,
 
 /* ============= HOME / COMPONENTS CUSTOM CSS STARTS HERE =============== */
 .title {
-  text-align: left; /* align text to the left */
+  text-align: left;
   margin-bottom: 1rem;
   overflow: hidden;
 }
 
-.title h2 {
+.base-title {
   font-size: 2.5rem;
-  font-weight: 700;
+  font-weight: 600;
   color: #111;
   position: relative;
   display: inline-block;
 }
 
-.title-underline {
+.base-underline {
   width: 40%;
   height: 4px;
   background-color: var(--color-primary-500);
